# europarl

./: .pre-commit-config.yaml  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/workflows/: main.yml
src/: client.py
src/europarl/: client.py
tests/: test_client.py  test_europarl_client.py
